syntax = "proto3";

option go_package = "github.com/artnikel/ProfileService/uproto";

message User {
    string id = 1;
    string login = 2;
    string password = 3;
    string refresh_token = 4;
}

service UserService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc GetByLogin(GetByLoginRequest) returns (GetByLoginResponse);
    rpc AddRefreshToken(AddRefreshTokenRequest) returns (AddRefreshTokenResponse);
    rpc GetRefreshTokenByID (GetRefreshTokenByIDRequest) returns (GetRefreshTokenByIDResponse);
    rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
}

message SignUpRequest{
    User user = 1;
}

message SignUpResponse{
    string id = 1;
}

message GetByLoginRequest{
    string login = 1;
}

message GetByLoginResponse{
    string password = 1;
    string id = 2;
}

message AddRefreshTokenRequest{
    string id = 1;
    string refresh_token = 2;
}

message AddRefreshTokenResponse{}

message GetRefreshTokenByIDRequest{
    string id = 1;
}

message GetRefreshTokenByIDResponse{
    string refresh_token = 1;
}

message DeleteAccountRequest{
    string id = 1;
}

message DeleteAccountResponse{
    string id = 1;
}